Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20078

Calling polish() doesn't always cause item to be polished

    XMLWordPrintable

Details

    Description

      Calling QSGItem::polish() doesn't cause the item's updatePolish() to be called unless a following frame has already been scheduled for it (e.g. if the item is being animated). The polish won't occur until a repaint is forced in some fashion.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aakenned Aaron Kennedy
            bealam Bea Lam (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes