Update polish even when animations aren't running

Task-number: QTBUG-20078

Change-Id: I095a872d72da61248794ec4a2a85f91ee618cdbc
Reviewed-on: http://codereview.qt.nokia.com/2063
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>